objects/WeeklyLeadConversionReport__c.object
<CustomObject>
    <description>Contains the lead converesion report by week</description>
    <fields>
        <fullName>CurrentWeekAmount__c</fullName>
        <description>Stores current week amount.</description>
        <label>CurrentWeekAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateOfTheStage__c</fullName>
        <description>Contains when the particular stage was created.</description>
        <label>DateOfTheStage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreviousWeekAmount__c</fullName>
        <description>Stores amount of the stage for previous week</description>
        <label>PreviousWeekAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WeeklyLeadConversionRate__c</fullName>
        <formula>((CurrentWeekAmount__c - PreviousWeekAmount__c )/ PreviousWeekAmount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WeeklyLeadConversionRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>WeeklyLeadConversionReport</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PreviousWeekAmount__c</columns>
        <columns>CurrentWeekAmount__c</columns>
        <columns>WeeklyLeadConversionRate__c</columns>
        <columns>DateOfTheStage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>WeeklyLeadConversionStage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeeklyLeadConversionReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>